<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anachronox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Global -->
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="chargement">Chargement…</string>

    <!-- Titre Activity -->
    <string name="title_activity_partie_chrono">PartieChrono</string>
    <string name="title_activity_partie_normal">PartieNormal</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_type_de_partie">TypeDePartie</string>
    <string name="title_activity_victoire">Victoire</string>
    <string name="title_activity_aide">Aide</string>
    <string name="title_activity_score">Score</string>

    <!-- Phrases -->
    <string name="validationQuitter">Voulez-vous quitter ?</string>
    <string name="victoire">Vous avez réussi à\nvaincre\nle dieu du temps !</string>
    <string name="msgAide">Essayez de trouver la combinaison d\'Anachronox !\n\n\n
Cette combinaison est composée de 4 couleurs parmi 8 disponibles pouvant être utilisées plusieurs fois.\n\n
Après avoir joué 4 couleurs, la correction est effectuée.\n\n
Pour chaque gemme mal positionné vous obtenez un gemme blanc, et pour ceux bien positionnés, un gemme rouge.\n\n\n
Bonne chance !</string>

    <!-- Menu -->
    <string name="menu">Menu</string>
    <string name="menu_nouvelle_partie">Nouvelle partie</string>
    <string name="menu_scores">Scores\n(à venir)</string>
    <string name="menu_options">Options</string>
    <string name="menu_aide">Aide</string>
    <string name="menu_type_normal">Entraînement</string>
    <string name="menu_type_chrono">Chronox</string>
    <string name="menu_quitter">Quitter</string>
    <string name="menu_retour">Retour</string>
    <string name="menu_reprendre">Reprendre</string>
    <string name="menu_recommencer">Recommencer</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_annuler_couleur">Annuler</string>

    <!-- Menu title -->
    <string name="menu_titre_pause">Voulez vous retourner\nau menu ?</string>
    <string name="menu_titre_type_partie">Mode de jeu</string>
    <string name="menu_titre_vitoire">Vous avez gagné !</string>

    <!-- Couleur -->
    <string name="ciant">Ciant</string>
    <string name="bleu">Bleu</string>
    <string name="jaune">Jaune</string>
    <string name="orange">Orange</string>
    <string name="rose">Rose</string>
    <string name="rouge">Rouge</string>
    <string name="vert">Vert</string>
    <string name="violet">Violet</string>

</resources>
