<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".Main"
    style="@style/fond" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="2">

        <Button
            android:id="@+id/partie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_nouvelle_partie"
            style="@style/btnMenuMain" />

        <Button
            android:id="@+id/scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_scores"
            style="@style/btnMenuMain" />

        <Button
            android:id="@+id/aide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_aide"
            style="@style/btnMenuMain" />

    </LinearLayout>

</LinearLayout>